fix(devcontainer): Address dbus and nix-daemon initialization issues
- Updated `postCreateCommand` in `devcontainer.json` to handle missing /run/dbus directory and use a direct dbus-daemon invocation.
- Modified `docker-compose.yml` to include /run/dbus as a writable tmpfs mount.
- Ensures compatibility with Codespaces environment lacking full systemd support.

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     tmpfs:
     - /run
     - /run/wrappers
+    - /run/dbus
     tty: true
     volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:ro
