--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,7 @@
 	// "shutdownAction": "none",
 
 	// Uncomment the next line to run commands after the container is created - for example installing curl.
-	"postCreateCommand": "sudo -n nix-daemon & sudo -n dbus-daemon --system & nix-channel --update",
+	"postCreateCommand": "mkdir -p /run/dbus && nix-daemon & dbus-daemon --config-file=/usr/share/dbus-1/system.conf --print-address & nix-channel --update",
 
 	// Uncomment to connect as a non-root user if you've added one. See https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "root",
