feat(devcontainer): Enhance NixOS devcontainer setup with improved dependencies and workflows
- Updated `devcontainer.json` to streamline postCreateCommand and environment setup.
- Enhanced `docker-compose.yml` with build args and tmpfs configuration for /run/dbus.
- Added or updated `Dockerfile` to install Nix packages (`dbus`, `nix`) using build arguments.
- Optimized workflow for compatibility with Codespaces and reproducible Nix environments.
- Improved support for templatable user@machine configurations and devshells.

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,6 +1,10 @@
 # generated using arion, do not edit manually. Override using docker-compose.override.yml
 services:
   devcontainer:
+    build:
+      context: .
+      args:
+        NIX_PACKAGES: "dbus nix"
     cap_add:
     - CAP_NET_ADMIN
     - SYS_ADMIN
@@ -16,7 +20,6 @@ services:
     tmpfs:
     - /run
     - /run/wrappers
-    - /run/dbus
     tty: true
     volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:ro
