fix(devcontainer): Resolve Nixpkgs and build user issues in Docker setup
- Added `nixpkgs` channel initialization in Dockerfile to ensure availability of required attributes.
- Created `nixbld` group and build users to support Nix builds.
- Updated `postCreateCommand` to ensure environment initialization for dbus and nix.
- Added `NIX_PATH` environment variable in `docker-compose.yml` for reproducibility.
- Improved compatibility with NixOS-based Codespaces templates.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,3 +6,16 @@ ARG NIX_PACKAGES
 
 # Install the specified Nix packages
 RUN nix-env -iA nixpkgs.${NIX_PACKAGES}
+
+# Add nixpkgs channel and ensure it's available
+RUN nix-channel --add https://nixos.org/channels/nixpkgs-unstable nixpkgs && \
+    nix-channel --update
+
+# Create nixbld group and add build users
+RUN for i in $(seq 1 10); do \
+useradd -m -s /sbin/nologin nixbld$i; \
+done && \
+groupadd nixbld && \
+for i in $(seq 1 10); do \
+usermod -a -G nixbld nixbld$i; \
+done
