fix(devcontainer): Resolve Nixpkgs attribute and build user issues
- Updated Dockerfile to add and update the `nixpkgs` channel for compatibility.
- Ensured the `nixbld` group and build users are created to support Nix builds.
- Corrected `postCreateCommand` in devcontainer.json to use valid Nix attributes.
- Enhanced docker-compose.yml with appropriate build arguments and environment variables.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,21 +1,15 @@
 # Base image for NixOS
 FROM ghcr.io/lucernae/devcontainer-nix:main--nixos-arion
 
-# Accept build arguments
-ARG NIX_PACKAGES
-
-# Install the specified Nix packages
-RUN nix-env -iA nixpkgs.${NIX_PACKAGES}
-
-# Add nixpkgs channel and ensure it's available
-RUN nix-channel --add https://nixos.org/channels/nixpkgs-unstable nixpkgs && \
+# Add and update nixpkgs channel
+RUN nix-channel --add https://nixos.org/channels/nixpkgs-23.05 nixpkgs && \
     nix-channel --update
 
 # Create nixbld group and add build users
-RUN for i in $(seq 1 10); do \
-useradd -m -s /sbin/nologin nixbld$i; \
-done && \
-groupadd nixbld && \
-for i in $(seq 1 10); do \
-usermod -a -G nixbld nixbld$i; \
-done
+RUN groupadd -r nixbld && \
+    for i in $(seq 1 10); do \
+      useradd -m -s /sbin/nologin -g nixbld nixbld$i; \
+    done
+
+# Install the specified Nix packages
+RUN nix-env -iA nixpkgs.dbus nixpkgs.nix
