--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,7 @@
 	// "shutdownAction": "none",
 
 	// Uncomment the next line to run commands after the container is created - for example installing curl.
-	"postCreateCommand": "nix-channel --update && nix-env -iA nixpkgs.dbus nix",
+	"postCreateCommand": "nix-channel --update && nix-env -iA nixpkgs.dbus nixpkgs.nix",
 
 	// Uncomment to connect as a non-root user if you've added one. See https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "root",
