--- a/.devcontainer/docker-compose.override.yml
+++ b/.devcontainer/docker-compose.override.yml
@@ -2,7 +2,8 @@ version: '3.4'
 services:
   devcontainer:
     image: ghcr.io/RyzeNGrind/devcontainer-nix:main
-    volumes:
-      - ./custom-config:/custom-config:ro
     environment:
+      USE_DIRENV: "true"
       CUSTOM_ENV_VAR: "value"
+    volumes:
+      - ./data:/data:rw
