fix(devcontainer): resolve broken configuration and implement nixos-24.11 support
- Updated `.devcontainer/Dockerfile` to fix Nix channel linking issues and ensure compatibility with nixos-24.11.
- Added `docker-compose.override.yml` for custom environment variables and volume mappings.
- Updated `devcontainer.json` to use a modular post-create script and `vscode` user for non-root workflows.
- Added `post-create.sh` script to handle post-container initialization tasks, such as starting services and updating Nix channels.
- Included `nix.conf` to enable experimental features like flakes and nix-command.
- Ensured reproducible, pure Nix workflows for templatable configurations.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,15 +1,45 @@
 # Base image for NixOS
-FROM ghcr.io/lucernae/devcontainer-nix:main--nixos-arion
+FROM ghcr.io/lucernae/devcontainer-nix:flake
 
-# Add and update nixpkgs channel
-RUN nix-channel --add https://nixos.org/channels/nixpkgs-24.11 nixpkgs && \
-    nix-channel --update
+# Set environment variables for Nix and Flakes
+ENV USE_DIRENV="true" \
+    USE_FLAKE="true" \
+    INSTALL_ROOT_PACKAGES="" \
+    PREBUILD_DEFAULT_PACKAGE="default.nix" \
+    PREBUILD_NIX_SHELL="shell.nix" \
+    PREBUILD_FLAKE="" \
+    PREBUILD_FLAKE_RUN="" \
+    PREBUILD_FLAKE_DEVELOP="" \
+    ADDITIONAL_NIX_CHANNEL="" \
+    ADDITIONAL_NIX_FLAKE_REGISTRY="" \
+    PREBUILD_HOME_MANAGER="" \
+    PREBUILD_HOME_MANAGER_FLAKE=""
 
-# Create nixbld group and add build users
-RUN groupadd -r nixbld && \
-    for i in $(seq 1 10); do \
-      useradd -m -s /sbin/nologin -g nixbld nixbld$i; \
-    done
+# Switch to root user for setup
+USER root
 
-# Install the specified Nix packages
+# Set up Nix channels, environment, and required directories
+RUN set -ex \
+    # Fix missing or broken Nix channel links
+    && mkdir -p /root/.nix-profile /root/.nix-defexpr /nix/var/nix/profiles/per-user/root/channels \
+    && [ -L /root/.nix-profile ] || ln -s /nix/var/nix/profiles/per-user/root/profile /root/.nix-profile \
+    && [ -L /root/.nix-defexpr/channels ] || ln -s /nix/var/nix/profiles/per-user/root/channels /root/.nix-defexpr \
+    && [ -L /root/.nix-channels ] || ln -s /nix/var/nix/profiles/per-user/root/channels /root/.nix-channels \
+    # Add and update nixpkgs channel
+    && nix-channel --add https://nixos.org/channels/nixpkgs-24.11 nixpkgs \
+    && nix-channel --update \
+    # Ensure os-release exists
+    && if [ ! -f /etc/os-release ]; then \
+          echo "NAME=NixOS" > /etc/os-release && \
+          echo "VERSION=24.11" >> /etc/os-release && \
+          echo "ID=nixos" >> /etc/os-release; \
+       fi \
+    # Clean up
+    && nix-store --gc \
+    && nix-collect-garbage -d
+
+# Install additional Nix packages
 RUN nix-env -iA nixpkgs.dbus nixpkgs.nix
+
+# Switch back to vscode user for container usage
+USER vscode
